<resources>
    <string name="app_name">Tienda Virtual</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="op_inciio_v">Inicio</string>
    <string name="op_mi_tienda_v">Mi tienda</string>
    <string name="op_resenia_v">Reseñas</string>
    <string name="op_cerrar_sesion_v">Cerrar sesion</string>
    <string name="Ubicacion">Ubicacion</string>

    <string name="op_mis_productos_v">Mis productos</string>
    <string name="op_mis_ordenes_v">Ordenes</string>

    <string name="txt_bienvenida">Bienvenido(a)</string>

    <!--REGISTRO DE VENDERDOR-->
    <string name="txtRegistroV">Registro de vendedor</string>
    <string name="etNombresV">Nombre Completos</string>
    <string name="etNombresV2">Nombre Completos</string>
    <string name="etEmailV">Correo electronico</string>
    <string name="etPassword">Contraseña</string>
    <string name="etCPassword">Confirmar contraseña</string>
    <string name="bntRegistrarV">Registrarme</string>

    <!--LOGIN DE VENDERDOR-->
    <string name="txtLoginV">Login de vendedor</string>
    <string name="btnLoginV">Ingresar</string>
    <string name="txtNocuenta">¿No tienes una cuenta?</string>
    <string name="tvRegistrarV">Registrarme</string>
    <string name="btnGoogleV">Ingresa con tu cuenta de Google</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    
    <!--Autenticacion con Google-->
    
    <string name="default_web_client_id">631461546087-eiihv596qlt7ppkff1s2iug9jnjrqqgp.apps.googleusercontent.com</string>
</resources>